testsuite/tests/structs/field_override/test.out
test.py:24: error: Expr.name cannot override RootNode.name unless the former is a concrete field and the latter is an abstract one
Done
